test/corpus/literals.txt
================================================================================
Integer
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  expression: (integer))

================================================================================
Float
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  expression: (float))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  expression: (boolean))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  expression: (boolean))

================================================================================
Null
================================================================================

null

--------------------------------------------------------------------------------

(source_file
  expression: (null))

================================================================================
Simple string
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  expression: (string))

================================================================================
Path
================================================================================

./foo/bar.nix

--------------------------------------------------------------------------------

(source_file
  expression: (path))

================================================================================
URI
================================================================================

https://example.com

--------------------------------------------------------------------------------

(source_file
  expression: (uri))